--- a/kly.css
+++ b/kly.css
@@ -17,7 +17,7 @@ width: 100%;
 nav{
 background: #FFC0CB;
 height: 40px;
-width;100%;
+width:100%;
 display: flex;
 align-items: center;
 justify-content: space-between;
