--- a/kly.css
+++ b/kly.css
@@ -15,13 +15,14 @@ height:20vh;
 width: 100%;
 }
 nav{
+font-size:  10px;
 background: #FFC0CB;
-height: 40px;
+height: 80px;
 width:100%;
 display: flex;
 align-items: center;
 justify-content: space-between;
-padding-top:40px;
+padding-top:1px;
 padding-left:10%;
 }
 nav ul li{
@@ -36,5 +37,5 @@ font-weight:bold;
 }
 nav ul li a:hover{
 color: #ea1538;
-transition: .3s;
+transition: 0.3s;
 }
